// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button С иконкой 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <button
      className="button button_size_m button_view_primary button_width_default button_form_default button_icon-only"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="icon_user_xs button__icon"
        fill="currentColor"
        height="11"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="5.5"
          cy="2.5"
          r="2.5"
        />
        <path
          clipRule="evenodd"
          d="M10 11c0-2.734-1-4.5-4.5-4.5S1 8.266 1 11h9z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Button С текстом 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <button
      className="button button_size_m button_view_primary button_width_default button_form_default"
      disabled={false}
      onClick={[Function]}
    >
      I am button
    </button>
  </div>
</div>
`;

exports[`Storyshots Button С текстом и иконкой 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <button
      className="button button_size_m button_view_primary button_width_default button_form_default button_with-icon_left"
      disabled={false}
      onClick={[Function]}
    >
      I am button
      <svg
        className="icon_user_xs button__icon"
        fill="currentColor"
        height="11"
        width="11"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="5.5"
          cy="2.5"
          r="2.5"
        />
        <path
          clipRule="evenodd"
          d="M10 11c0-2.734-1-4.5-4.5-4.5S1 8.266 1 11h9z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Checkbox Чекбокс 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <label
      className="checkbox checkbox_size_m"
    >
      <input
        className="checkbox__input"
        disabled={false}
        type="checkbox"
      />
      <div
        className="checkbox__box"
      />
      <span
        className="checkbox__text"
      >
        Check me, baby!
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots ChoiceGroup Множественный выбор 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <div
      className="choice-group choice-group_multiple choice-group_form_default"
    >
      <label
        className="choice-group__item"
        tabIndex={-1}
      >
        <input
          checked={false}
          className="choice-group__input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <button
          className="button button_size_m button_view_primary button_form_default choice-group__button"
          onBlur={[Function]}
          tabIndex={-1}
          type="button"
        >
          1 choice
        </button>
      </label>
      <label
        className="choice-group__item"
        tabIndex={-1}
      >
        <input
          checked={false}
          className="choice-group__input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <button
          className="button button_size_m button_view_primary button_form_default choice-group__button"
          onBlur={[Function]}
          tabIndex={-1}
          type="button"
        >
          2 choice
        </button>
      </label>
      <label
        className="choice-group__item"
        tabIndex={-1}
      >
        <input
          checked={false}
          className="choice-group__input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <button
          className="button button_size_m button_view_primary button_form_default choice-group__button"
          onBlur={[Function]}
          tabIndex={-1}
          type="button"
        >
          3 choice
        </button>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots ChoiceGroup Один вариант выбора 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <div
      className="choice-group choice-group_form_default"
    >
      <label
        className="choice-group__item"
        tabIndex={-1}
      >
        <input
          checked={false}
          className="choice-group__input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <button
          className="button button_size_m button_view_primary button_form_default choice-group__button"
          onBlur={[Function]}
          tabIndex={-1}
          type="button"
        >
          1 choice
        </button>
      </label>
      <label
        className="choice-group__item"
        tabIndex={-1}
      >
        <input
          checked={false}
          className="choice-group__input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <button
          className="button button_size_m button_view_primary button_form_default choice-group__button"
          onBlur={[Function]}
          tabIndex={-1}
          type="button"
        >
          2 choice
        </button>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Common List Общий список 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <div
      className="common"
    >
      <section
        className="common__buttons"
      >
        <h2
          className="text text_size_3xl text_view_primary text_weight-bold"
        >
          Buttons
        </h2>
        <div>
          <button
            className="button button_width_default button_form_default button_size_l button_view_primary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_m button_view_primary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_s button_view_primary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_xs button_view_primary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
        </div>
        <div>
          <button
            className="button button_width_default button_form_default button_size_l button_view_secondary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_m button_view_secondary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_s button_view_secondary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_xs button_view_secondary"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
        </div>
        <div>
          <button
            className="button button_width_default button_form_default button_size_l button_view_ghost"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_m button_view_ghost"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_s button_view_ghost"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_xs button_view_ghost"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
        </div>
        <div>
          <button
            className="button button_width_default button_form_default button_size_l button_view_clear"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_m button_view_clear"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_s button_view_clear"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
          <button
            className="button button_width_default button_form_default button_size_xs button_view_clear"
            disabled={false}
            onClick={[Function]}
          >
            I am button
          </button>
        </div>
      </section>
      <section
        className="common__inputs"
      >
        <h2
          className="text text_size_3xl text_view_primary text_weight-bold"
        >
          Inputs
        </h2>
        <div>
          <textarea
            className="input input_view_default input_width_default input_type_textarea input_size_l"
            disabled={false}
            form="default"
            placeholder="My placeholder"
          />
          <input
            className="input input_view_default input_width_default input_form_default input_size_l"
            disabled={false}
            placeholder="My placeholder"
            type="text"
          />
        </div>
        <div>
          <textarea
            className="input input_view_default input_width_default input_type_textarea input_size_m"
            disabled={false}
            form="default"
            placeholder="My placeholder"
          />
          <input
            className="input input_view_default input_width_default input_form_default input_size_m"
            disabled={false}
            placeholder="My placeholder"
            type="text"
          />
        </div>
        <div>
          <textarea
            className="input input_view_default input_width_default input_type_textarea input_size_s"
            disabled={false}
            form="default"
            placeholder="My placeholder"
          />
          <input
            className="input input_view_default input_width_default input_form_default input_size_s"
            disabled={false}
            placeholder="My placeholder"
            type="text"
          />
        </div>
        <div>
          <textarea
            className="input input_view_default input_width_default input_type_textarea input_size_xs"
            disabled={false}
            form="default"
            placeholder="My placeholder"
          />
          <input
            className="input input_view_default input_width_default input_form_default input_size_xs"
            disabled={false}
            placeholder="My placeholder"
            type="text"
          />
        </div>
        <h3>
          Input + input
        </h3>
        <input
          className="input input_view_default input_size_m input_form_default-clear"
          placeholder="My placeholder"
          type="text"
        />
        <input
          className="input input_view_default input_size_m input_form_brick-default"
          placeholder="My placeholder"
          type="text"
        />
        <h3>
          Input + input + input
        </h3>
        <input
          className="input input_view_default input_size_m input_form_default-clear"
          placeholder="My placeholder"
          type="text"
        />
        <input
          className="input input_view_default input_size_m input_form_brick-clear"
          placeholder="My placeholder"
          type="text"
        />
        <input
          className="input input_view_default input_size_m input_form_brick-default"
          placeholder="My placeholder"
          type="text"
        />
        <h3>
          Input + button
        </h3>
        <input
          className="input input_view_default input_size_m input_form_default-clear"
          placeholder="My placeholder"
          type="text"
        />
        <button
          className="button button_size_m button_view_primary button_form_brick-default"
          onClick={[Function]}
        >
          I am button
        </button>
        <h3>
          Input + input + button
        </h3>
        <input
          className="input input_view_default input_size_m input_form_default-clear"
          placeholder="My placeholder"
          type="text"
        />
        <input
          className="input input_view_default input_size_m input_form_brick-clear"
          placeholder="My placeholder"
          type="text"
        />
        <button
          className="button button_size_m button_view_primary button_form_brick-default"
          onClick={[Function]}
        >
          I am button
        </button>
      </section>
      <section>
        <h2
          className="text text_size_3xl text_view_primary text_weight-bold"
        >
          ChoiceGroup
        </h2>
        <div
          className="choice-group choice-group_form_default"
        >
          <label
            className="choice-group__item"
            tabIndex={-1}
          >
            <input
              checked={false}
              className="choice-group__input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <button
              className="button button_size_l button_view_primary button_form_default choice-group__button"
              onBlur={[Function]}
              tabIndex={-1}
              type="button"
            >
              1 choice
            </button>
          </label>
          <label
            className="choice-group__item"
            tabIndex={-1}
          >
            <input
              checked={false}
              className="choice-group__input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <button
              className="button button_size_l button_view_primary button_form_default choice-group__button"
              onBlur={[Function]}
              tabIndex={-1}
              type="button"
            >
              2 choice
            </button>
          </label>
          <label
            className="choice-group__item"
            tabIndex={-1}
          >
            <input
              checked={false}
              className="choice-group__input"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <button
              className="button button_size_l button_view_primary button_form_default choice-group__button"
              onBlur={[Function]}
              tabIndex={-1}
              type="button"
            >
              The third choice
            </button>
          </label>
        </div>
      </section>
      <section
        className="common__checkbox"
      >
        <h2
          className="text text_size_3xl text_view_primary text_weight-bold"
        >
          Checkbox
        </h2>
        <div>
          <label
            className="checkbox checkbox_size_m"
          >
            <input
              className="checkbox__input"
              disabled={false}
              type="checkbox"
            />
            <div
              className="checkbox__box"
            />
            <span
              className="checkbox__text"
            >
              Check me, baby!
            </span>
          </label>
          <label
            className="checkbox checkbox_size_m"
          >
            <input
              className="checkbox__input"
              disabled={false}
              type="checkbox"
            />
            <div
              className="checkbox__box"
            />
            <span
              className="checkbox__text"
            >
              Check me, baby!
            </span>
          </label>
        </div>
        <div>
          <label
            className="checkbox checkbox_size_l"
          >
            <input
              className="checkbox__input"
              disabled={false}
              type="checkbox"
            />
            <div
              className="checkbox__box"
            />
            <span
              className="checkbox__text"
            >
              Check me, baby!
            </span>
          </label>
          <label
            className="checkbox checkbox_size_l"
          >
            <input
              className="checkbox__input"
              disabled={false}
              type="checkbox"
            />
            <div
              className="checkbox__box"
            />
            <span
              className="checkbox__text"
            >
              Check me, baby!
            </span>
          </label>
        </div>
      </section>
      <section
        className="common__radio"
      >
        <h2
          className="text text_size_3xl text_view_primary text_weight-bold"
        >
          Radio
        </h2>
        <div>
          <label
            className="radio radio_size_m"
          >
            <input
              className="radio__input"
              disabled={false}
              type="radio"
            />
            <div
              className="radio__box"
            />
            <span
              className="radio__text"
            >
              I am radio
            </span>
          </label>
          <label
            className="radio radio_size_m"
          >
            <input
              className="radio__input"
              disabled={false}
              type="radio"
            />
            <div
              className="radio__box"
            />
            <span
              className="radio__text"
            >
              I am radio
            </span>
          </label>
        </div>
        <div>
          <label
            className="radio radio_size_l"
          >
            <input
              className="radio__input"
              disabled={false}
              type="radio"
            />
            <div
              className="radio__box"
            />
            <span
              className="radio__text"
            >
              I am radio
            </span>
          </label>
          <label
            className="radio radio_size_l"
          >
            <input
              className="radio__input"
              disabled={false}
              type="radio"
            />
            <div
              className="radio__box"
            />
            <span
              className="radio__text"
            >
              I am radio
            </span>
          </label>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Текстовый инпут 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <input
      className="input input_view_default input_width_default input_size_m input_form_default"
      disabled={false}
      placeholder="My placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Loader Точки 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <div
      className="loader loader_size_s"
    >
      <div
        className="loader__dot"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio Радио кнопка 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <label
      className="radio radio_size_m"
    >
      <input
        className="radio__input"
        disabled={false}
        type="radio"
      />
      <div
        className="radio__box"
      />
      <span
        className="radio__text"
      >
        I am radio
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Switch Свитч 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <label
      className="switch switch_size_m"
    >
      <input
        className="switch__input"
        disabled={false}
        type="checkbox"
      />
      <div
        className="switch__box"
      />
      <span
        className="switch__text"
      >
        Move me, I beg you!
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Textarea Текстовый инпут 1`] = `
<div
  className="theme theme_breakpoint_default theme_color_gpn-default theme_control_gpn-default theme_font_gpn-default theme_gap_small theme_size_gpn-default theme_space_default"
>
  <div
    id="app"
    style={
      Object {
        "background": "var(--color-bg-default)",
        "minHeight": "100vh",
        "padding": "var(--space-3xl)",
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <textarea
        className="input input_view_default input_width_full input_size_m input_type_textarea"
        disabled={false}
        placeholder="My placeholder"
      />
    </div>
  </div>
</div>
`;
